# free-genai-bootcamp-2025

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-no-mupdf.txt
genai-architecting/: README.md
lang-portal/: .gitignore
lang-portal/backend-FastApi/: .gitignore  Backend-Technical-Specs.md  README.md  pyproject.toml  setup.sh  test.db  words.db
lang-portal/backend-FastApi/migrations/: 0001_init.sql
lang-portal/backend-FastApi/scripts/: run_migrations.py  seed_data.py  utils.py
lang-portal/backend-FastApi/seeds/: basic_greetings.json  basic_verbs.json  colors.json  family.json  foods.json  numbers.json
lang-portal/backend-FastApi/src/: main.py
lang-portal/backend-FastApi/src/api/: dashboard.py  groups.py  study_activities.py  study_sessions.py  words.py
lang-portal/backend-FastApi/src/core/: config.py  database.py
lang-portal/backend-FastApi/src/models/: group.py  study_activity.py  study_session.py  word.py  word_review.py
lang-portal/backend-FastApi/src/schemas/: dashboard.py  group.py  study_activity.py  study_session.py  word.py
lang-portal/backend-FastApi/src/services/: dashboard_service.py  group_service.py  study_activity_service.py  study_session_service.py  word_service.py
lang-portal/backend-FastApi/tests/: conftest.py
lang-portal/backend-FastApi/tests/test_api/: test_dashboard.py  test_groups.py  test_words.py
lang-portal/frontend-react/: .gitignore  README.md  index.html  package-lock.json  package.json
lang-portal/frontend-react/src/: App.tsx  types.ts
lang-portal/frontend-react/src/components/dashboard/: LastSessionCard.tsx  QuickStatsCard.tsx  StudyProgressCard.tsx
lang-portal/frontend-react/src/contexts/: ThemeContext.tsx
lang-portal/frontend-react/src/pages/: Dashboard.tsx  GroupShow.tsx  Groups.tsx  Home.tsx  Launchpad.tsx  Settings.tsx  StudyActivities.tsx  StudyActivityLaunch.tsx  StudyActivityShow.tsx  StudySessionShow.tsx  StudySessions.tsx  WordShow.tsx  Words.tsx
lang-portal/frontend-react/src/services/: api.ts
language_learning_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
language_listening_app/: .coverage  .gitignore  README.md  __init__.py  credentials.md  pyproject.toml  requirements.txt  run_test.py  setup.py  test_backend.py
language_listening_app/backend/: __init__.py  app_service.py  direct_imports.py  llm_manager.py  transcript_processor.py  vector_store.py
language_listening_app/config/: __init__.py  settings.py
language_listening_app/frontend/: __init__.py  app.py
language_listening_app/models/: __init__.py  schemas.py
language_listening_app/utils/: __init__.py  helpers.py  tts_utils.py
opea-chatqna/: ReadMe.md
opea-project/: add_langchain_docs.py  set_env.sh  test.py  test_langchain_redis.py  test_redis.py  test_retriever_only.py
opea-simpletextqna/: Dockerfile  README.md  docker-compose.yaml  main.py  nginx.conf  requirements.txt  simple.txt
opea-simpletextqna/data/: text_data.db
sentence-constructor/chatgpt/: Readme.md  prompt.md
sentence-constructor/claude/: Readme.md  examples.xml  prompt.md
sentence-constructor/meta-ai/: Readme.md  prompt.md  prompt.txt
song-vocab/: .gitignore  Agent_Workflow.md  README.md  api_server.py  fetch_ddg.py  fetch_lyrics.py  process_lyrics.py  pyproject.toml  song_agent.py
vocab-importer/: README.md  vocab_tool.py
writing-practice/: README.md  pyproject.toml
writing-practice/src/: app.py  test_manga.py
youtube-summariser/: README.md  pyproject.toml  youtube_summariser.py
