[project]
name = "language-learning-api"
version = "0.2.0"
description = "Backend API for a language learning portal"
requires-python = ">=3.13.1"  # This is the correct way to specify Python version
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pyjwt>=2.8.0",
    "streamlit>=1.32.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",  # For Excel file support
    "python-dotenv>=1.0.1",  # For environment variables
    "SpeechRecognition>=3.10.1",  # For speech-to-text conversion
    "youtube-transcript-api>=0.6.2",  # For YouTube transcript downloading
    "gTTS>=2.5.1",  # For text-to-speech conversion
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0"
]